# ompi-tests-public

./: .gitignore  .gitmodules  README.md
.github/workflows/: pr-checks.yaml
alltoallv_validation/: .gitignore  Makefile.am  README.md  configure.ac
alltoallv_validation/src/: Makefile.am  alltoallv_ddt.cpp  sanity.cpp  typemap.c
collective-big-count/: Makefile  README.md  common.h  diagnostic.c  test_allgather.c  test_allgatherv.c  test_allreduce.c  test_alltoall.c  test_alltoallv.c  test_bcast.c  test_exscan.c  test_gather.c  test_gatherv.c  test_reduce.c  test_reduce_scatter.c  test_scan.c  test_scatter.c  test_scatterv.c
comm_split_type/: Makefile  cmsplit_type.c
events/: Makefile  README.md  events_callbacks.c  events_common.c  events_common.h  events_dropped.c  events_example.c  events_meta_data.c  events_read_data.c  events_source.c  events_types.c
packaging/: Makefile.am  README.md  configure.ac  nmcheck_prefix.pl  run_nmcheck.c
part-comm/: .test_commOrder3.c.swp  README.md  test.c  test_commOrder0.c  test_commOrder1.c  test_commOrder2.c  test_commOrder3.c  test_diffPartSize.c  test_negPartError.c  test_nullBuff.c  test_parrived.c  test_partComm.c  test_preadyError0.c  test_preadyError1.c  test_preadyList.c  test_preadyRange.c  test_procNull.c  test_startall.c  test_upperLimit.c  test_wildcardsError.c
partitioned-communication/: Makefile  README.md  runtests.py  test_cancel0.c  test_common.h  test_datatype0.c  test_datatype1.c  test_datatype2.c  test_datatype3.c  test_datatype4.c  test_datatype5.c  test_example1a.c  test_example1b.c  test_example2.c  test_example3a.c  test_example3b.c  test_example3c.c  test_free0.c  test_init0.c  test_init1.c  test_init2.c  test_local0.c  test_local1.c  test_numparts0.c  test_numparts1.c  test_order0.c  test_parrived0.c  test_parrived1.c  test_parrived2.c  test_partitions0.c  test_partitions1.c  test_partitions2.c  test_partitions3.c  test_pready0.c  test_pready1.c  test_pready2.c  test_pready3.c  test_pready4.c  test_pready_list0.c  test_pready_list1.c  (+7 more)
runtime/: .ci-configure  .ci-tests  README.md
runtime/hello_world/: build.sh  run.sh
sessions/: Makefile  README.md  sessions_ex1.c  sessions_ex2.c  sessions_ex3.f90  sessions_ex4.f90  sessions_test.c  sessions_test1.c  sessions_test10.c  sessions_test11.c  sessions_test12.c  sessions_test13.c  sessions_test14.c  sessions_test15.c  sessions_test16.c  sessions_test2.c  sessions_test3.c  sessions_test4.c  sessions_test6.c  sessions_test7.c  sessions_test8.c  sessions_test9.c
singleton/: Makefile  hello_c.c  run.sh  simple_spawn.c  simple_spawn_multiple.c
status/: .gitignore  Makefile.am  README.md  configure.ac
status/src/: Makefile.am  status_c.c  status_fortran.F90
